--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,10 @@ dependencies {
     implementation "com.android.support:support-annotations:$supportVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    //Moshi
     implementation "com.squareup.moshi:moshi:1.5.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.5.0"
+    implementation "com.squareup.moshi:moshi-adapters:1.5.0"
 
     //Test
     testImplementation 'junit:junit:4.12'
@@ -79,8 +81,16 @@ dependencies {
     //LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.lifecycle:runtime:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //Room
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
+
+    //Okhttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 }
