add unit test and able to load image with review

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,7 @@ dependencies {
 
     //Okhttp
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+
+    //Mokito
+    testImplementation 'org.mockito:mockito-inline:2.8.47'
 }
